
	 * Entry - New API: added edje_object_part_text_append which appends
	   text to the end of the textblock part. This lets us do cool thing
	   like population of textblock using idler.

2011-05-16  Carsten Haitzler (The Rasterman)

	* Add new interpolation modes for programs to make animation
        much easier. Added: ACCEL_FAC, DECEL_FAC, SIN_FAC, DIVIS,
        BOUNCE, SPRING (also made short name versions of the long ones
        possible too).

2011-05-19  Tom Hacohen (TAsn)

	 * Entry: Don't emit "cursor,changed" when setting the text, because
	   the cursor really didn't change, it's more like a new cursor.
	   Also, when setting position, don't do anything if position is as it
	   was.

2011-05-27  Carsten Haitzler (The Rasterman)

	* Improve performance on create/delete of edje objects by using
        evas freeze and thaw calls. May help in certain pathological
        situations.

2011-05-27  Cedric Bail

	* Improve performance by avoiding walking eina_list for nothing
	when deleting member_class.

2011-06-09  Cedric Bail

	* Fix external usage in sub group to have the proper parents.

2011-06-11  Tom Hacohen (TAsn)

	* Fix an issue with ellipsis not working properly with small
	  text parts.

2011-06-21  Cedric Bail

	* Make it possible to define part.description.max only on one axis.

2011-07-24  Mike Blumenkrantz

        * Add signals entry,paste,request,1 (PRIMARY) and entry,paste,request,3 (CLIPBOARD)
          to differentiate between paste types
        * Add entry,selection,all,request for signalling ctrl+a in an entry
        * Add entry,selection,none,request for signalling ctrl+shift+a in an entry
        * Fix entry,paste,request* to be emitted after cursor,changed (fixes middle mouse paste location)
        
2011-05-27  Carsten Haitzler (The Rasterman)

	* Fix edje_shutdown() being called before all evas objects created
        by edje (edje objects) are gone. Delay internal core shutdown
        until all references gone.
